--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,12 @@ dependencies:
   safemap: ^2.0.0-nullsafety.0
   cached_network_image: ^3.2.3
   preload_page_view: ^0.2.0
+  flutter_quill: ^7.4.7
+  camera: ^0.10.5+4
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  permission_handler: ^11.0.0
+  fluttertoast: ^8.2.2
 
 
 dev_dependencies:
