--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,12 @@ dependencies:
   permission_handler: ^11.0.0
   fluttertoast: ^8.2.2
   flutter_native_splash: ^2.3.2
+  firebase_auth: ^4.10.1
+  google_sign_in: ^6.1.5
+#  flutter_facebook_auth: ^6.0.2
+  loading_overlay: ^0.3.0
+  rflutter_alert: ^2.0.7
+  firebase_core: ^2.17.0
 
 dev_dependencies:
   flutter_test:
