--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,6 +112,7 @@ flutter:
     - assets/shopping/
     - assets/.env
     - assets/images/
+    - assets/images/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
