--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   loading_overlay: ^0.3.0
   rflutter_alert: ^2.0.7
   firebase_core: ^2.17.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
