--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   rflutter_alert: ^2.0.7
   firebase_core: ^2.17.0
   device_preview: ^1.1.0
+  firebase_messaging: ^14.6.9
+  firebase_analytics: ^10.5.1
 
 dev_dependencies:
   flutter_test:
