--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,9 @@ dependencies:
   device_preview: ^1.1.0
   firebase_messaging: ^14.6.9
   firebase_analytics: ^10.5.1
+  image_cropper: ^5.0.0
+  image_picker: ^1.0.4
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
