--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   image_cropper: ^5.0.0
   image_picker: ^1.0.4
   dotted_border: ^2.1.0
+  sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_test:
